--- a/css/main.css
+++ b/css/main.css
@@ -293,7 +293,7 @@
       position: absolute;
       opacity: 0;
       top: 0;
-      right: -20px;
+      right: -50px;
       transition: 0.5s; }
   #home #hero {
     height: 23em;
